# market-scraper

./: .gitignore  README.md  SKILL.md  polymarket.db  polymarket.db-journal  pyproject.toml  requirements.txt
polymarket_tools/: __init__.py  __main__.py  api.py  db.py  log.py  migrate_state_to_market_change.py  scanner.py  set_wal_mode.py  tools.py
polymarket_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
polymarket_tools/migrations/: __init__.py  correct_yes_no_prices.py  delete_empty_liquidity.py  fix_unknown_status.py  migrate_state_to_market_change.py  prune_market_changes.py
tests/: test_correct_yes_no_prices.py  test_scanner_midpoint.py
